--- a/myblog/views/index.ejs
+++ b/myblog/views/index.ejs
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+
+
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <%- include('layout') %>
+    <h1>Welcome to <%= title %></h1>
+    <a href="/blogs/add">เขียนบทความ</a>
+
+
   </body>
 </html>
