--- a/myblog/views/blogs/blogsAdd.ejs
+++ b/myblog/views/blogs/blogsAdd.ejs
@@ -6,12 +6,12 @@
 
 </head>
 <body>
-    <%- include('../layout')  %> 
+  <div class="container">
+    <%- include('../layout')  %>
     <div class="row">
         <div class="col-md-4 order-md-2 mb-4">
           <h4 class="d-flex justify-content-between align-items-center mb-3">
             <span class="text-muted">อัพโหลดภาพปก</span>
-            <span class="badge badge-secondary badge-pill">3</span>
           </h4>
           <form class="md-form">
             <div class="file-field">
@@ -95,7 +95,7 @@
       </div>
 
 
-
+    </div>
 
 </body>
 </html>
