--- a/myblog/views/index.ejs
+++ b/myblog/views/index.ejs
@@ -5,10 +5,121 @@
 
   </head>
   <body>
+    <div class="container">
     <%- include('layout') %>
-    <h1>Welcome to <%= title %></h1>
-    <a href="/blogs/add">เขียนบทความ</a>
+    <!-- <h1>Welcome to <%= title %></h1> -->  
+      <div class="jumbotron p-4 p-md-5 text-white rounded bg-dark">
+        <div class="col-md-6 px-0">
+          <h1 class="display-4 font-italic">Banner</h1>
+          <p class="lead my-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+          <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
+        </div>
+      </div>
+      <h3 class="pb-1 mb-4 font-italic" style='padding-top:30px;'>
+        E-Book มาใหม่
+      </h3>
+      <div class="row">
+        <div class="col-md-2">
+         <a href="#">
+          <div class="card mb-4 shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><rect width="100%" height="100%" fill="#55595c"></rect></svg>
+            <div class="card-body">
+              <p class="card-text">ชื่อนิยาย</p>
+            </div>
+          </div>
+        </a>
+        </div>
 
+        <div class="col-md-2">
+          <a href="#">
+           <div class="card mb-4 shadow-sm">
+             <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><rect width="100%" height="100%" fill="#55595c"></rect></svg>
+             <div class="card-body">
+               <p class="card-text">ชื่อนิยาย</p>
+             </div>
+           </div>
+         </a>
+         </div>
+
+         <div class="col-md-2">
+          <a href="#">
+           <div class="card mb-4 shadow-sm">
+             <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><rect width="100%" height="100%" fill="#55595c"></rect></svg>
+             <div class="card-body">
+               <p class="card-text">ชื่อนิยาย</p>
+             </div>
+           </div>
+         </a>
+         </div>
+
+         <div class="col-md-2">
+          <a href="#">
+           <div class="card mb-4 shadow-sm">
+             <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><rect width="100%" height="100%" fill="#55595c"></rect></svg>
+             <div class="card-body">
+               <p class="card-text">ชื่อนิยาย</p>
+             </div>
+           </div>
+         </a>
+         </div>
+
+         <div class="col-md-2">
+          <a href="#">
+           <div class="card mb-4 shadow-sm">
+             <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><rect width="100%" height="100%" fill="#55595c"></rect></svg>
+             <div class="card-body">
+               <p class="card-text">ชื่อนิยาย</p>
+             </div>
+           </div>
+         </a>
+         </div>
+
+         <div class="col-md-2">
+          <a href="#">
+           <div class="card mb-4 shadow-sm">
+             <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><rect width="100%" height="100%" fill="#55595c"></rect></svg>
+             <div class="card-body">
+               <p class="card-text">ชื่อนิยาย</p>
+             </div>
+           </div>
+         </a>
+         </div>
+      </div>
+
+      <h3 class="pb-1 mb-4 font-italic " style='padding-top:30px;'>
+        โปรโมชันน่าที่สนใจ
+      </h3>
+      <div class="row mb-2">
+        <div class="col-md-6">
+          <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="col p-4 d-flex flex-column position-static">
+              <strong class="d-inline-block mb-2 text-success">ทั่วไป</strong>
+              <h3 class="mb-0">Title</h3>
+              <div class="mb-1 text-muted">Category</div>
+              <p class="card-text mb-auto">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <a href="#" class="stretched-link">Continue reading</a>
+            </div>
+            <div class="col-auto d-none d-lg-block">
+              <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><rect width="100%" height="100%" fill="#55595c"></rect></svg>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="col p-4 d-flex flex-column position-static">
+              <strong class="d-inline-block mb-2 text-warning">18+</strong>
+              <h3 class="mb-0">Title</h3>
+              <div class="mb-1 text-muted">Category</div>
+              <p class="mb-auto">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <a href="#" class="stretched-link">Continue reading</a>
+            </div>
+            <div class="col-auto d-none d-lg-block">
+              <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><rect width="100%" height="100%" fill="#55595c"></rect></svg>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
 
   </body>
 </html>
